# bot

./: .gitignore  pyproject.toml
core/: settings.py
